resolve problem to mearge